# rimworld-workshop-downloader

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  build.sh  bump-version.sh  flake.nix  package-lock.json  package.json  release-checklist.md  run-dev.sh
.github/workflows/: ci.yml  release.yml
assets/: icon.xcf
backend/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/scripts/: downloadSteamCmd.js
backend/src/: commands.rs  index.ts  lib.rs  services.rs
backend/src/backend/: cache.rs  deserializers.rs  downloader.rs  mod.rs  mod_query.rs  mod_updater.rs  steam_api.rs
backend/src/commands/: backup_handlers.rs  download_handlers.rs  export_handlers.rs  ignore_handlers.rs  mod.rs  query_handlers.rs  types.rs  update_handlers.rs  watcher_handlers.rs  workshop_handlers.rs
backend/src/core/: access_check.rs  mod.rs  mod_manager.rs  mod_scanner.rs  mod_watcher.rs  steamcmd_client.rs  workshop_client.rs
backend/src/routes/: mod.ts  workshop.ts
backend/src/services/: cache.ts  downloader.ts  modQuery.ts  modUpdater.ts  rateLimiter.ts
backend/tests/: integration_tests.rs
frontend/: App.css  App.tsx  README.md  index.html  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
frontend/components/: AccessErrorBanner.css  AccessErrorBanner.tsx  AppMenu.css  AppMenu.tsx  ContextMenu.tsx  CorruptedModConflictModal.tsx  DownloadTab.tsx  ForceUpdateAllModal.tsx  InstalledModsTab.tsx  MessageModal.tsx  ModList.css  ModList.tsx  QueryTab.css  QueryTab.tsx  RestoreBackupModal.tsx  Select.css  Select.tsx  SettingField.tsx  SettingsTab.css  SettingsTab.tsx  ThemeSelect.tsx
frontend/contexts/: AccessErrorContext.tsx  InstalledModsContext.tsx  ModWatcherContext.tsx  ModalContext.tsx  ModsContext.tsx  SettingsContext.tsx
frontend/hooks/: useFormatting.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
frontend/src-tauri/src/backend/: deserializers.rs  downloader.rs  mod.rs  mod_query.rs  mod_updater.rs  rate_limiter.rs  steam_api.rs
scripts/: Cargo.toml
scripts/src/: main.rs
(+17 files in other folders)
